--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
         </section>
 
         <!-- Créer -->
-<section class="page-section bg-light" id="creer"> <!-- évite l’accent dans l’id -->
+    <section class="page-section bg-light" id="creer"></section>
+    <div class="py-5">
     <div class="container">
       <div class="text-center">
         <h2 class="section-heading text-uppercase">Créer</h2>
@@ -161,100 +162,97 @@
         </div>
       </div>
     </div>
+    </div>
   </section>
   
                 
         </section>
-        <!-- rayonner-->
+       
+        <!-- rayonner -->
         <section class="page-section bg-light" id="rayonner">
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Rayonner</h2>
-                    <h3 class="section-subheading text-muted">petite description d'action de vulgarisation, publication ou autre rayonnement</h3>
+                    <p class="section-subheading text-muted mx-auto lead mw-640">
+                        Dialoguer pour partager les retombées du projet à travers des actions de vulgarisation, des publications, des conférences et d’autres formes de diffusion scientifique et publique.
+                    </p>
                 </div>
-                <ul class="timeline">
+
+                <!-- timeline -->
+                <ul class="timeline mt-5">
                     <li>
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/1.jpg" alt="..." /></div>
-                        <div class="timeline-panel">
-                            <div class="timeline-heading">
-                                <h4>2009-2011</h4>
-                                <h4 class="subheading">Our Humble Beginnings</h4>
-                            </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
+                        <div class="timeline-image">
+                            <a href="https://lesconnecteurs.ca/cclair-quantique-responsable/" target="_blank" title="Voir la publication">
+                                <img class="rounded-circle img-fluid" src="assets/img/about/C+clair.jpg" alt="Publication Dialogues quantiques 2023" />
+                            </a>
                         </div>
-                    </li>
-                    <li class="timeline-inverted">
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/2.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>March 2011</h4>
-                                <h4 class="subheading">An Agency is Born</h4>
+                                <h4>2024</h4>
+                                <h4 class="subheading">Épisode de l'émission C+clair</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/3.jpg" alt="..." /></div>
-                        <div class="timeline-panel">
-                            <div class="timeline-heading">
-                                <h4>December 2015</h4>
-                                <h4 class="subheading">Transition to Full Service</h4>
+                            <div class="timeline-body">
+                                <p class="text-muted">
+                                    Tournage et diffusion de l'épisode "Quantique responsable : comment arrimer la recherche et l'innovation?" Entrevue conduite par Chloé-Anne Touma, produit par Les Connecteurs
+                                </p>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
-                        </div>
-                    </li>
-                    <li class="timeline-inverted">
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/4.jpg" alt="..." /></div>
-                        <div class="timeline-panel">
-                            <div class="timeline-heading">
-                                <h4>July 2020</h4>
-                                <h4 class="subheading">Phase Two Expansion</h4>
-                            </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
                         <div class="timeline-image">
-                            <h4>
-                                Be Part
-                                <br />
-                                Of Our
-                                <br />
-                                Story!
-                            </h4>
+                            <a href="https://www.theatrerenard.com/rebellion-du-minuscule" target="_blank" title="Voir la publication">
+                                <img class="rounded-circle img-fluid" src="assets/img/about/rebellion_du_minuscule.png" alt="Publication Dialogues quantiques 2023" />
+                            </a>
+                        </div>
+                        <div class="timeline-panel">
+                            <div class="timeline-heading">
+                                <h4>2025</h4>
+                                <h4 class="subheading">Pièce de théâtre</h4>
+                            </div>
+                            <div class="timeline-body">
+                                <p class="text-muted">
+                                    Représentations de la pièce "La rébellion du minuscule" au Centre culturel de l'UdeS, production du Théâtre du renard
+                                </p>
+                            </div>
                         </div>
                     </li>
+                    <li>
+                        <div class="timeline-image">
+                            <a href="https://youtu.be/XYNnLNeAWxI?si=xvpsT-MMSXFSksm7" target="_blank" title="Voir la publication">
+                                <img class="rounded-circle img-fluid" src="assets/img/about/capsulevideo2.png" alt="Publication Dialogues quantiques 2023" />
+                            </a>
+                        </div>
+                        <div class="timeline-panel">
+                            <div class="timeline-heading">
+                                <h4>2025</h4>
+                                <h4 class="subheading">Capsule vidéo</h4>
+                            </div>
+                            <div class="timeline-body">
+                                <p class="text-muted">
+                                    L’école d’été “Dialogue quantique” et la publication d’un numéro spécial consacrent la diffusion des savoirs co-construits entre chercheurs, étudiants et partenaires.
+                                </p>
+                            </div>
+                        </div>
+                    </li>
+                    <!-- bouton vers la page dédiée -->
+                    <li class="timeline-inverted">
+                        <div class="timeline-image d-flex align-items-center justify-content-center">
+                          <a href="rayonner.html"
+                             style="color:white; text-decoration:none; font-weight:600;">
+                             En savoir plus <i class="fas fa-arrow-right ms-2"></i>
+                          </a>
+                        </div>
+                      </li>                                                            
                 </ul>
             </div>
         </section>
 
-        <!-- Clients-->
-        <section class="page-section bg-light" id="recommandations"></section>
-            <div class="py-5">
-                <div class="container">
-                    <div class="row align-items-center">
-                        <div class="col-md-3 col-sm-6 my-3">
-                            <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/microsoft.svg" alt="..." aria-label="Microsoft Logo" /></a>
-                        </div>
-                        <div class="col-md-3 col-sm-6 my-3">
-                            <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/google.svg" alt="..." aria-label="Google Logo" /></a>
-                        </div>
-                        <div class="col-md-3 col-sm-6 my-3">
-                            <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/facebook.svg" alt="..." aria-label="Facebook Logo" /></a>
-                        </div>
-                        <div class="col-md-3 col-sm-6 my-3">
-                            <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/ibm.svg" alt="..." aria-label="IBM Logo" /></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
         <!-- équipe-->
-    <section class="page-section bg-light" id="équipe">
+        <section class="page-section bg-light" id="équipe"></section>
+        <div class="py-5">
         <div class="container">
             <div class="text-center">
                 <h2 class="section-heading text-uppercase">Notre équipe de recherche</h2>
-                <h3 class="section-subheading text-muted">Présentation des membres de l'équipe de recherche</h3>
             </div>
             <div class="row">
                 <!-- Profil d'Elsa-->
@@ -291,6 +289,7 @@
             <div class="row">
                 <div class="col-lg-8 mx-auto text-center"><p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p></div>
             </div>
+        </div>
         </div>
     </section>
         <!-- formulaire de contact-->
