Ajout de verbatims, structure de la page rayonner

--- a/créer.html
+++ b/créer.html
@@ -29,9 +29,9 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
-                    <li class="nav-item"><a class="nav-link" href="index.html#anticiper">Anticiper</a></li>
+                    <li class="nav-item"><a class="nav-link" href="anticiper.html">Anticiper</a></li>
                     <li class="nav-item"><a class="nav-link" href="#creer">Créer</a></li>
-                    <li class="nav-item"><a class="nav-link" href="index.html#rayonner">Rayonner</a></li>
+                    <li class="nav-item"><a class="nav-link" href="rayonner.html">Rayonner</a></li>
                     <li class="nav-item"><a class="nav-link" href="index.html#recomandations">Recommandations</a></li>
                     <li class="nav-item"><a class="nav-link" href="index.html#equipe">équipe</a></li>
                 </ul>
