--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                 </div>
 
                 <!-- timeline -->
-                <ul class="timeline mt-5">
+                <ul class="timeline mt-5 mb-0">
                     <li>
                         <div class="timeline-image">
                             <a href="https://lesconnecteurs.ca/cclair-quantique-responsable/" target="_blank" title="Voir la publication">
@@ -235,7 +235,7 @@
                         </div>
                     </li>
                     <!-- bouton vers la page dédiée -->
-                    <li class="timeline-inverted">
+                    <li class="timeline-inverted" style="margin-bottom:0;">
                         <div class="timeline-image d-flex align-items-center justify-content-center">
                           <a href="rayonner.html"
                              style="color:white; text-decoration:none; font-weight:600;">
@@ -244,11 +244,10 @@
                         </div>
                       </li>                                                            
                 </ul>
-            </div>
         </section>
 
         <!-- équipe-->
-        <section class="page-section bg-light" id="équipe"></section>
+        <section class="page-section bg-light" id="equipe"></section>
         <div class="py-5">
         <div class="container">
             <div class="text-center">
@@ -259,7 +258,7 @@
                 <div class="col-lg-4">
                     <div class="team-member">
                         <img class="mx-auto rounded-circle" src="assets/img/team/Elsa Paukovics 2022.jpg" alt="..." />
-                        <h4><a href="elsa-paukovics.html">Elsa Paukovics</a></h4>
+                        <h4><a href="elsa_paukovics.html">Elsa Paukovics</a></h4>
                         <p class="text-muted">Chercheure postdoctorale</p>
                         <a class="btn btn-dark btn-social mx-2" href="https://orcid.org/0000-0002-3740-088X" aria-label="Elsa Paukovics ORCID Profile"><i class="fab fa-orcid"></i></a>
                         <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/elsa-paukovics-45aa32a4/" aria-label="Elsa Paukovics LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
