--- a/rayonner.html
+++ b/rayonner.html
@@ -42,8 +42,8 @@
     <!-- Masthead-->
     <header class="masthead">
         <div class="container">
-            <div class="masthead-heading text-uppercase">Anticiper</div>
-            <div class="masthead-subheading">Dialoguer pour anticiper les effets sociaux, éthiques et environnementaux des technologies quantiques en créant des espaces d’échange inclusifs et réguliers.</div>
+            <div class="masthead-heading text-uppercase">Rayonner</div>
+            <div class="masthead-subheading">Dialoguer pour partager les retombées du projet à travers des actions de vulgarisation, des publications, des conférences et d’autres formes de diffusion scientifique et publique.</div>
         </div>
     </header>
         
@@ -57,9 +57,9 @@
                     <i class="fas fa-users fa-stack-1x fa-inverse"></i>
                 </span>
                 <p class="text-muted mb-4">
-                    Dialogue entre les acteurs industriels, politiques et de la société civile de la région de Sherbrooke
+                    Publications et communications scientifiques
                 </p>
-                <a href="#rencontres_locales" class="btn btn-outline-primary">Rencontres locales</a>
+                <a href="#rencontres_locales" class="btn btn-outline-primary">Rayonnement scientifique</a>
             </div>
             <div class="col-lg-4 col-md-6 mb-4">
                 <span class="fa-stack fa-4x">
@@ -67,19 +67,9 @@
                     <i class="fas fa-globe fa-stack-1x fa-inverse"></i>
                 </span>
                 <p class="text-muted mb-4">
-                    Dialogue entre les acteurs industriels, politiques, académiques et de la société civile à l'échelle du Canada.
+                    Activités de vulgarisation et entrevues médiatiques
                 </p>
-                <a href="#rencontres_nationales" class="btn btn-outline-primary">Rencontres nationales</a>
-            </div>
-            <div class="col-lg-4 col-md-6 mb-4">
-                <span class="fa-stack fa-4x">
-                    <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                    <i class="fas fa-comments fa-stack-1x fa-inverse"></i>
-                </span>
-                <p class="text-muted mb-4">
-                    Dialogue avec des professeurs universitaires, des étudiants et des professionnels
-                </p>
-                <a href="#partenaires" class="btn btn-outline-primary">Entrevues</a>
+                <a href="#rencontres_nationales" class="btn btn-outline-primary">Rayonnement public</a>
             </div>
         </div>
     </div>
