--- a/elsa_paukovics.html
+++ b/elsa_paukovics.html
@@ -19,21 +19,19 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand" href="index.html#page-top">Votre Projet</a>
+            <a class="navbar-brand" href="index.html#page-top">Dialogues Quantiques</a>
             <div class="navbar-nav ms-auto py-4 py-lg-0">
-                <a class="nav-link" href="index.html#team">Retour à l'équipe</a>
-                <a class="nav-link" href="index.html">Accueil</a>
+                <a class="nav-link" href="index.html#equipe">Retour à l'équipe</a>
             </div>
         </div>
     </nav>
 
     <!-- Page Header-->
-    <header class="masthead">
+    <header class="masthead" style="min-height:auto; padding:6rem 0 2rem; background-size:cover; background-position:center;">
         <div class="container">
-            <div class="masthead-heading text-uppercase">Elsa Paukovics</div>
-            <div class="masthead-subheading">Chercheure postdoctorale</div>
+          <div class="masthead-subheading" style="font-size:2.2rem;"></div>
         </div>
-    </header>
+      </header>
 
 <!-- Profile Content-->
 <section class="page-section" id="profile">
@@ -47,6 +45,9 @@
                 </div>
             </div>
             <div class="col-lg-8">
+                <div class="masthead-subheading" style="font-size:2.2rem;">Elsa PAUKOVICS</div>
+                <div class="masthead-heading text-uppercase" style="font-size:1.1rem;">Postdoctorat</div>
+                <p></p>
                 <p class="large"><strong>Discipline de recherche :</strong> Sciences de l'éducation</p>
                 
                 <p class="large"><strong>Thématiques explorées dans le cadre du projet :</strong> collaboration interdisciplinaire et intersectorielle, formation à la recherche et l'innovation responsable en technologies quantiques, compétences transversales</p>
