Création des pages étudiants

--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
                 </p>
             </div>
         </header>
-        <!-- anticiper -->
+
+        <!-- ANTICIPER -->
         <section class="page-section bg-light" id="anticiper">
             <div class="container">
                 <div class="text-center">
@@ -95,15 +96,14 @@
                         </div>
         </section>
 
-        <!-- Créer -->
-    <section class="page-section bg-light" id="creer"></section>
-    <div class="py-5">
-    <div class="container">
-      <div class="text-center">
-        <h2 class="section-heading text-uppercase">Créer</h2>
-        <p class="section-subheading text-muted mx-auto lead mw-640">
-          Dialoguer pour donner vie à des mesures concrètes et situées en soutien au développement responsable de technologies quantiques spécifiques
-        </p>
+        <!-- CREER -->
+        <section class="page-section bg-light" id="creer">
+            <div class="container">
+              <div class="text-center">
+                <h2 class="section-heading text-uppercase">Créer</h2>
+                <p class="section-subheading text-muted mx-auto lead mw-640">
+                  Dialoguer pour donner vie à des mesures concrètes et situées en soutien au développement responsable de technologies quantiques spécifiques
+                </p>
   
         <!-- bouton vers la page dédiée -->
         <a class="btn btn-primary btn-md rounded-pill shadow-sm mt-2" href="créer.html">
@@ -120,11 +120,11 @@
               <div class="portfolio-hover">
                 <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
               </div>
-              <img class="img-fluid portfolio-thumb" src="assets/img/portfolio/Jouvence nature.jpg" alt="...">
+              <img class="img-fluid portfolio-thumb" src="assets/img/portfolio/proto1.png" alt="...">
             </a>
             <div class="portfolio-caption">
               <div class="portfolio-caption-heading">Jeu d'Aventure Interactif PNT (Position, navigation, timing)</div>
-              <div class="portfolio-caption-subheading text-muted">Prototype #1</div>
+              <div class="portfolio-caption-subheading text-muted">Prototype de mesure #1</div>
             </div>
           </div>
         </div>
@@ -140,7 +140,7 @@
             </a>
             <div class="portfolio-caption">
               <div class="portfolio-caption-heading">Cube d'innovation responsable quantique</div>
-              <div class="portfolio-caption-subheading text-muted">Prototype #2</div>
+              <div class="portfolio-caption-subheading text-muted">Prototype de mesure #2</div>
             </div>
           </div>
         </div>
@@ -152,16 +152,15 @@
               <div class="portfolio-hover">
                 <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
               </div>
-              <img class="img-fluid portfolio-thumb" src="assets/img/portfolio/3.jpg" alt="...">
+              <img class="img-fluid portfolio-thumb" src="assets/img/portfolio/proto3.png" alt="...">
             </a>
             <div class="portfolio-caption">
-              <div class="portfolio-caption-heading">Finish</div>
-              <div class="portfolio-caption-subheading text-muted">Prototype #3</div>
+              <div class="portfolio-caption-heading">Exposition Interactive sur l'Internet Quantique</div>
+              <div class="portfolio-caption-subheading text-muted">Prototype de mesure #3</div>
             </div>
           </div>
         </div>
       </div>
-    </div>
     </div>
   </section>
   
@@ -188,12 +187,11 @@
                         </div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>2024</h4>
                                 <h4 class="subheading">Épisode de l'émission C+clair</h4>
                             </div>
                             <div class="timeline-body">
                                 <p class="text-muted">
-                                    Tournage et diffusion de l'épisode "Quantique responsable : comment arrimer la recherche et l'innovation?" Entrevue conduite par Chloé-Anne Touma, produit par Les Connecteurs
+                                    Tournage et diffusion de l'épisode "Quantique responsable : comment arrimer la recherche et l'innovation?" Entrevue de Chloé-Anne Touma, produit par Les Connecteurs.
                                 </p>
                             </div>
                         </div>
@@ -206,12 +204,11 @@
                         </div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>2025</h4>
                                 <h4 class="subheading">Pièce de théâtre</h4>
                             </div>
                             <div class="timeline-body">
                                 <p class="text-muted">
-                                    Représentations de la pièce "La rébellion du minuscule" au Centre culturel de l'UdeS, production du Théâtre du renard
+                                    Représentations de la pièce "La rébellion du minuscule" au Centre culturel de l'UdeS, production du Théâtre du renard.
                                 </p>
                             </div>
                         </div>
@@ -224,12 +221,11 @@
                         </div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>2025</h4>
                                 <h4 class="subheading">Capsule vidéo</h4>
                             </div>
                             <div class="timeline-body">
                                 <p class="text-muted">
-                                    L’école d’été “Dialogue quantique” et la publication d’un numéro spécial consacrent la diffusion des savoirs co-construits entre chercheurs, étudiants et partenaires.
+                                    Capsule vidéo de présentation du projet Dialogues Quantiques, produite par l'Institut Quantique et diffusée à la maison du cinéma de Sherbrooke en septembre 2025.
                                 </p>
                             </div>
                         </div>
@@ -247,49 +243,75 @@
         </section>
 
         <!-- équipe-->
-        <section class="page-section bg-light" id="equipe"></section>
-        <div class="py-5">
+        <section class="page-section bg-light"></section>
+        <div class="py-5" id="equipe">
         <div class="container">
             <div class="text-center">
                 <h2 class="section-heading text-uppercase">Notre équipe de recherche</h2>
             </div>
-            <div class="row">
-                <!-- Profil d'Elsa-->
-                <div class="col-lg-4">
-                    <div class="team-member">
-                        <img class="mx-auto rounded-circle" src="assets/img/team/Elsa Paukovics 2022.jpg" alt="..." />
-                        <h4><a href="elsa_paukovics.html">Elsa Paukovics</a></h4>
-                        <p class="text-muted">Chercheure postdoctorale</p>
-                        <a class="btn btn-dark btn-social mx-2" href="https://orcid.org/0000-0002-3740-088X" aria-label="Elsa Paukovics ORCID Profile"><i class="fab fa-orcid"></i></a>
-                        <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/elsa-paukovics-45aa32a4/" aria-label="Elsa Paukovics LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
+                <div class="row mt-4">
+                    <!-- Profil d'Elsa-->
+                    <div class="col-lg-4">
+                        <div class="team-member">
+                            <img class="mx-auto rounded-circle" src="assets/img/team/Elsa Paukovics 2022.jpg" alt="..." />
+                            <h4><a href="elsa_paukovics.html">Elsa Paukovics</a></h4>
+                            <p class="text-muted">Chercheure postdoctorale</p>
+                            <a class="btn btn-dark btn-social mx-2" href="https://orcid.org/0000-0002-3740-088X" aria-label="Elsa Paukovics ORCID Profile"><i class="fab fa-orcid"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/elsa-paukovics-45aa32a4/" aria-label="Elsa Paukovics LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
+                        </div>
+                    </div>
+                    <!-- Profil de Charles-->
+                    <div class="col-lg-4">
+                        <div class="team-member">
+                            <img class="mx-auto rounded-circle" src="assets/img/team/charles_verret.jpg" alt="..." />
+                            <h4><a href="charles_verret.html">Charles Verret</a></h4>
+                            <p class="text-muted">Étudiant en maîtrise</p>
+                            <!-- <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Charles Verret LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a> -->
+                        </div>
+                    </div>
+                    <!-- Profil de Karen -->
+                    <div class="col-lg-4">
+                        <div class="team-member">
+                            <img class="mx-auto rounded-circle" src="assets/img/team/karen_poulin.jpg" alt="..." />
+                            <h4> <a href=karen_poulin.html>Karen Poulin</a></h4>
+                            <p class="text-muted">Doctorante</p>
+                            <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/karen-poulin-979305164/" aria-label="Karen Poulin LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
+                        </div>
                     </div>
                 </div>
-                <div class="col-lg-4">
-                    <div class="team-member">
-                        <img class="mx-auto rounded-circle" src="assets/img/team/2.jpg" alt="..." />
-                        <h4>Diana Petersen</h4>
-                        <p class="text-muted">Lead Marketer</p>
-                        <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Diana Petersen Twitter Profile"><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Diana Petersen Facebook Profile"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Diana Petersen LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
+        <!-- Nouvelle ligne -->
+                <div class="row">
+                    <!-- Profil d'Emma Bolduc -->
+                    <div class="col-lg-4">
+                        <div class="team-member">
+                            <img class="mx-auto rounded-circle" src="assets/img/team/emma_bolduc.jpg" alt="..." />
+                            <h4><a href="emma_bolduc.html">Emma Bolduc</a></h4>
+                            <p class="text-muted">Doctorante</p>
+                            <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/emma-bolduc-3091b4261/" aria-label="Emma Bolduc LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
+                        </div>
+                    </div>
+                
+                    <!-- Profil de Sami Kedissa -->
+                    <div class="col-lg-4">
+                        <div class="team-member">
+                            <img class="mx-auto rounded-circle" src="assets/img/team/anna.jpg" alt="..." />
+                            <h4> <a href="sami_kedissa.html">Sami Kedissa</a></h4>
+                            <p class="text-muted">Étudiant en maîtrise</p>
+                            <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/sami-kedissa/" aria-label="Sami Kedissa LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
+                        </div>
+                    </div>
+                
+                    <!-- Profil de Josie -->
+                    <div class="col-lg-4">
+                        <div class="team-member">
+                            <img class="mx-auto rounded-circle" src="assets/img/team/josie.jpg" alt="..." />
+                            <h4>Josie Tremblay</h4>
+                            <p class="text-muted">Designer pédagogique</p>
+                        </div>
                     </div>
                 </div>
-                <div class="col-lg-4">
-                    <div class="team-member">
-                        <img class="mx-auto rounded-circle" src="assets/img/team/3.jpg" alt="..." />
-                        <h4>Larry Parker</h4>
-                        <p class="text-muted">Lead Developer</p>
-                        <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker Twitter Profile"><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker Facebook Profile"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-8 mx-auto text-center"><p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p></div>
-            </div>
         </div>
-        </div>
+    </div>
     </section>
         <!-- formulaire de contact-->
         <section class="page-section" id="équipe">
