--- a/rayonner.html
+++ b/rayonner.html
@@ -30,7 +30,7 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
                     <li class="nav-item"><a class="nav-link" href="anticiper.html">Anticiper</a></li>
-                    <li class="nav-item"><a class="nav-link" href="crer.html">Créer</a></li>
+                    <li class="nav-item"><a class="nav-link" href="creer.html">Créer</a></li>
                     <li class="nav-item"><a class="nav-link" href="rayonner.html">Rayonner</a></li>
                     <li class="nav-item"><a class="nav-link" href="recommandations.html">Recommandations</a></li>
                     <li class="nav-item"><a class="nav-link" href="index.html#equipe">Équipe</a></li>
