--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 </p>
   
         <!-- bouton vers la page dédiée -->
-        <a class="btn btn-primary btn-md rounded-pill shadow-sm mt-2" href="créer.html">
+        <a class="btn btn-primary btn-md rounded-pill shadow-sm mt-2" href="creer.html">
           En savoir plus <i class="fas fa-arrow-right ms-2"></i>
         </a>
       </div>
@@ -218,7 +218,7 @@
                         </div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4 class="subheading">Capsule vidéo</h4>
+                                <h4 class="subheading">Le projet Dialogues quantiques</h4>
                             </div>
                             <div class="timeline-body">
                                 <p class="text-muted">
@@ -240,7 +240,7 @@
         </section>
 
         <!-- équipe-->
-        <section class="page-section bg-light"></section>
+        <section class="page-section bg-light pt-4"></section>
         <div class="py-5" id="equipe">
         <div class="container">
             <div class="text-center">
