--- a/rayonner.html
+++ b/rayonner.html
@@ -222,6 +222,12 @@
         </div>
       </div>
       <!-- fin de la deuxième carte -->
+      
+      <!-- à ajouter quelque part :
+        Lacroix, Isabelle. 2025, 13–14 mai. Plan directeur – Secteur du Lac-des-Nations, ateliers consultatifs thématiques, Ville de Sherbrooke.
+        Lacroix, Isabelle. 2025, 15 mai. Maillage et intersectorialité [panel]. Forum de collaboration inter-regroupements stratégiques – Édition 2025, FRQNT, Québec.
+        Paukovics, Elsa. 2025, 6 mai. Organisation du colloque ACFAS “Compétences collaboratives pour la recherche et le développement responsable des technologies quantiques”, 92e Congrès de l’ACFAS, Montréal, Québec.
+-->
   
     </div>
   </section>
@@ -274,6 +280,25 @@
           </div>
         </div>
   
+                <!-- Carte 3 -->
+        <div class="col-12 col-lg-6">
+            <div class="card h-100 shadow-sm">
+            <img src="assets/img/about/capsulevideo2.png" class="card-img-top" alt="Capsule vidéo Dialogues Quantiques">
+            <div class="card-body">
+                <h5 class="card-title">Capsule vidéo – Le projet Dialogues Quantiques</h5>
+                <p class="card-text text-muted small mb-3">Institut Quantique — Maison du cinéma de Sherbrooke (2025)</p>
+                <div class="d-flex gap-2">
+                <a href="https://youtu.be/XYNnLNeAWxI?si=xvpsT-MMSXFSksm7" target="_blank" rel="noopener" class="btn btn-outline-primary btn-sm">
+                    Voir la capsule
+                </a>
+                <button class="btn btn-primary btn-sm" data-bs-toggle="modal" data-bs-target="#modalCapsule">
+                    Détails
+                </button>
+                </div>
+            </div>
+            </div>
+        </div>
+
       </div> <!-- /row -->
     </div>
   </section>
@@ -324,6 +349,35 @@
       </div>
     </div>
   </div>
+
+    <!-- Modale 3 -->
+    <div class="modal fade" id="modalCapsule" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog modal-lg modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+            <h5 class="modal-title">Capsule vidéo – Le projet Dialogues Quantiques</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fermer"></button>
+            </div>
+            <div class="modal-body">
+            <p>
+                Capsule vidéo de présentation du projet <em>Dialogues Quantiques</em>, produite par l’Institut Quantique et diffusée 
+                à la Maison du cinéma de Sherbrooke en septembre 2025.
+            </p>
+            <ul class="small text-muted">
+                <li>Format : Vidéo / Vulgarisation scientifique</li>
+                <li>Année : 2025</li>
+            </ul>
+            </div>
+            <div class="modal-footer">
+            <a class="btn btn-outline-primary" href="https://youtu.be/XYNnLNeAWxI?si=xvpsT-MMSXFSksm7" target="_blank" rel="noopener">
+                Voir sur YouTube
+            </a>
+            <button class="btn btn-secondary" data-bs-dismiss="modal">Fermer</button>
+            </div>
+        </div>
+        </div>
+    </div>
+  
   
 
 
