retouche page créer

--- a/emma_bolduc.html
+++ b/emma_bolduc.html
@@ -41,7 +41,7 @@
                 <img class="img-fluid rounded-circle mb-4" src="assets/img/team/emma_bolduc.jpg" alt="Karen Poulin" style="max-width: 300px;" />
                 <div class="mt-3">
                    <!-- <a class="btn btn-dark btn-social mx-2" href="https://orcid.org/0000-0002-3740-088X" aria-label="ORCID Profile"><i class="fab fa-orcid"></i></a> -->
-                    <a class="btn btn-dark btn-social mx-2" href="" aria-label="LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
+                    <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/emma-bolduc-3091b4261/" aria-label="LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
                 </div>
             </div>
             <div class="col-lg-8">
