--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
                 <!--  </form>
             </div>
         </section> -->
-        <!-- Footer-->
+        <!-- Footer
         <footer class="footer py-4">
             <div class="container">
                 <div class="row align-items-center">
@@ -385,9 +385,9 @@
                     </div>
                 </div>
             </div>
-        </footer>
+        </footer> -->
         <!-- Portfolio Modals-->
-        <!-- Portfolio item 1 modal popup-->
+        <!-- Portfolio item 1 modal popup
         <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
@@ -395,8 +395,8 @@
                     <div class="container">
                         <div class="row justify-content-center">
                             <div class="col-lg-8">
-                                <div class="modal-body">
-                                    <!-- Project details-->
+                                <div class="modal-body"> -->
+                                    <!-- Project details
                                     <h2 class="text-uppercase">Retraite de travail</h2>
                                     <p class="item-intro text-muted">Jouvence, 16 au 19 juin 2025</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/Jouvence présentation.jpg" alt="..." />
@@ -414,8 +414,8 @@
                                             <strong>méthodes et modalités de travail</strong>
                                             Lister et référencer quelques méthodes. 
                                         </li>
-                                    </ul>
-                                    <!-- BOUTON POUR OUVRIR LE PROGRAMME -->
+                                    </ul> -->
+                                    <!-- BOUTON POUR OUVRIR LE PROGRAMME 
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-toggle="modal" data-bs-target="#programmeModal1" type="button">
                                         <i class="fas fa-file-alt me-1"></i>
                                         Programme détaillé
@@ -427,9 +427,9 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         
-        <!-- Modal pour le programme détaillé de Jouvence -->
+        <!-- Modal pour le programme détaillé de Jouvence 
         <div class="portfolio-modal modal fade" id="programmeModal1" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="modal-dialog modal-xl">
                 <div class="modal-content">
@@ -451,10 +451,10 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         
 
-        <!-- Portfolio item 2 modal popup-->
+        <!-- Portfolio item 2 modal popup
         <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
@@ -462,8 +462,8 @@
                     <div class="container">
                         <div class="row justify-content-center">
                             <div class="col-lg-8">
-                                <div class="modal-body">
-                                    <!-- Project details -->
+                                <div class="modal-body"> -->
+                                    <!-- Project details 
 <h2 class="text-uppercase">Cube d'Innovation Responsable Quantique (Q-Cube)</h2>
 <p class="item-intro text-muted">
   Prototype #1 – produit lors de la retraite de travail à Jouvence (16-19 juin 2025)
@@ -500,8 +500,8 @@
     <li><strong>Promotion de l’inclusivité :</strong> encourager la recherche interdisciplinaire grâce à des incitations financières.</li>
     <li><strong>Boîte à outils pour journalistes scientifiques et décideurs :</strong> plateforme en ligne avec contenu vidéo fiable et perspectives contrastées.</li>
     <li><strong>Implication publique :</strong> communication, consultation et justification des décisions publiques.</li>
-  </ol>
-  <!-- Commentaire du groupe (verbatims) -->
+  </ol> -->
+  <!-- Commentaire du groupe (verbatims) 
 <section class="mt-4">
     <div class="card border-0 shadow-sm">
       <div class="card-body p-4">
@@ -513,9 +513,9 @@
         <p class="text-muted mb-4">
           Le groupe a voulu traduire des principes d’IR/Responsible Innovation en
           <strong>mesures concrètes et actionnables</strong>, plutôt que d’ajouter un cadre de plus.
-        </p>
+        </p> -->
   
-        <!-- Verbatim 1 -->
+        <!-- Verbatim 1 
         <blockquote class="blockquote ps-3 border-start border-3">
           <p class="mb-2">
             “If you're a government and you want to engage in responsible innovation and responsibly
@@ -523,9 +523,9 @@
             measures. You have to do <em>all</em> of them.”
           </p>
           <footer class="blockquote-footer">Présentation du prototype Q-Cube</footer>
-        </blockquote>
+        </blockquote> -->
   
-        <!-- Verbatim 2 -->
+        <!-- Verbatim 2 
         <blockquote class="blockquote ps-3 border-start border-3 mt-3">
           <p class="mb-2">
             The group recognizes that “there are currently a lot of frameworks for responsible
@@ -533,9 +533,9 @@
             into more specific measures.”
           </p>
           <footer class="blockquote-footer">Discussion du groupe</footer>
-        </blockquote>
+        </blockquote> -->
   
-        <!-- Synthèse ultra-courte (facultatif) -->
+        <!-- Synthèse ultra-courte (facultatif) 
         <div class="mt-3 small text-muted">
           <i class="fas fa-circle-info me-1"></i>
           Leur intention : <strong>opérationnaliser</strong> l’éthique, la durabilité et la
@@ -543,11 +543,11 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> 
   
-</div>
+</div> -->
 
-                                    <!-- BOUTON QUI REDIRIGE VERS ZENODO -->
+                                    <!-- BOUTON QUI REDIRIGE VERS ZENODO 
                                     <a class="btn btn-primary btn-xl text-uppercase" href="https://zenodo.org/communities/instruments-pour-la-recherche-orientee-par-la-conception/records?q=&l=list&p=1&s=10&sort=newest" target="_blank" rel="noopener noreferrer">
                                         <i class="fas fa-external-link-alt me-1"></i>
                                         Voir sur Zenodo
@@ -558,8 +558,8 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <!-- Portfolio item 3 modal popup-->
+        </div> -->
+        <!-- Portfolio item 3 modal popup
         <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
@@ -567,8 +567,8 @@
                     <div class="container">
                         <div class="row justify-content-center">
                             <div class="col-lg-8">
-                                <div class="modal-body">
-                                    <!-- Project details-->
+                                <div class="modal-body"> -->
+                                    <!-- Project details
                                     <h2 class="text-uppercase">Project Name</h2>
                                     <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/3.jpg" alt="..." />
@@ -593,8 +593,8 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <!-- Portfolio item 4 modal popup-->
+        </div> -->
+        <!-- Portfolio item 4 modal popup
         <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
@@ -602,8 +602,8 @@
                     <div class="container">
                         <div class="row justify-content-center">
                             <div class="col-lg-8">
-                                <div class="modal-body">
-                                    <!-- Project details-->
+                                <div class="modal-body"> -->
+                                    <!-- Project details
                                     <h2 class="text-uppercase">Project Name</h2>
                                     <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/4.jpg" alt="..." />
@@ -628,8 +628,8 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <!-- Portfolio item 5 modal popup-->
+        </div> -->
+        <!-- Portfolio item 5 modal popup
         <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
@@ -637,8 +637,8 @@
                     <div class="container">
                         <div class="row justify-content-center">
                             <div class="col-lg-8">
-                                <div class="modal-body">
-                                    <!-- Project details-->
+                                <div class="modal-body"> -->
+                                    <!-- Project details
                                     <h2 class="text-uppercase">Project Name</h2>
                                     <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/5.jpg" alt="..." />
@@ -663,8 +663,8 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <!-- Portfolio item 6 modal popup-->
+        </div> -->
+        <!-- Portfolio item 6 modal popup
         <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
@@ -672,8 +672,8 @@
                     <div class="container">
                         <div class="row justify-content-center">
                             <div class="col-lg-8">
-                                <div class="modal-body">
-                                    <!-- Project details-->
+                                <div class="modal-body"> -->
+                                    <!-- Project details
                                     <h2 class="text-uppercase">Project Name</h2>
                                     <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/6.jpg" alt="..." />
@@ -698,7 +698,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
